--- a/package.json
+++ b/package.json
@@ -16,18 +16,22 @@
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.21.16",
 		"clsx": "^2.1.1",
+		"cmdk-sv": "^0.0.18",
+		"formsnap": "^1.0.1",
+		"lucide-svelte": "^0.468.0",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0",
+		"sveltekit-superforms": "^2.21.1",
 		"tailwind-merge": "^2.5.5",
 		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.9",
-		"vite": "^6.0.0"
+		"vite": "^6.0.0",
+		"zod": "^3.23.8"
 	},
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.9",
-		"@tailwindcss/typography": "^0.5.15",
-		"lucide-svelte": "^0.468.0"
+		"@tailwindcss/typography": "^0.5.15"
 	}
 }
