--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
 		"tailwind-merge": "^2.5.5",
 		"tailwind-variants": "^0.3.0",
 		"tailwindcss": "^3.4.9",
+		"vaul-svelte": "^0.3.2",
 		"vite": "^6.0.0",
 		"zod": "^3.23.8"
 	},
