--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
 	"dependencies": {
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"highlight.js": "^11.11.0"
+		"highlight.js": "^11.11.0",
+		"mode-watcher": "^0.5.0"
 	}
 }
