--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
 		"build": "vite build",
 		"preview": "vite preview",
 		"format": "prettier --write .",
-		"lint": "prettier --check ."
+		"lint": "prettier --check .",
+		"start": "vite preview --port 3000"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
