--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"preview": "vite preview",
 		"format": "prettier --write .",
 		"lint": "prettier --check .",
-		"start": "vite preview --port 3000"
+		"start": "vite preview --port 3000 --host"
 	},
 	"devDependencies": {
 		"@sveltejs/adapter-auto": "^3.0.0",
