--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
 		"tailwindcss": "^3.4.9",
 		"vaul-svelte": "^0.3.2",
 		"vite": "^6.0.0",
+		"vite-plugin-compression": "^0.5.1",
 		"zod": "^3.23.8"
 	},
 	"dependencies": {
