--- a/package.json
+++ b/package.json
@@ -21,10 +21,12 @@
 		"cmdk-sv": "^0.0.18",
 		"formsnap": "^1.0.1",
 		"lucide-svelte": "^0.468.0",
+		"mode-watcher": "^0.5.1",
 		"prettier": "^3.3.2",
 		"prettier-plugin-svelte": "^3.2.6",
 		"prettier-plugin-tailwindcss": "^0.6.5",
 		"svelte": "^5.0.0",
+		"svelte-sonner": "^0.3.28",
 		"sveltekit-superforms": "^2.21.1",
 		"tailwind-merge": "^2.5.5",
 		"tailwind-variants": "^0.3.0",
@@ -38,7 +40,6 @@
 		"@supabase/supabase-js": "^2.48.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"highlight.js": "^11.11.0",
-		"mode-watcher": "^0.5.0"
+		"highlight.js": "^11.11.0"
 	}
 }
