--- a/package.json
+++ b/package.json
@@ -40,7 +40,6 @@
 		"@supabase/supabase-js": "^2.48.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"highlight.js": "^11.11.0",
-		"masonry-layout": "^4.2.2"
+		"highlight.js": "^11.11.0"
 	}
 }
