--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
 		"start": "vite preview --port 3000 --host"
 	},
 	"devDependencies": {
+		"@lucide/svelte": "^0.484.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-node": "^5.2.11",
 		"@sveltejs/kit": "^2.9.0",
