--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
 		"preview": "vite preview",
 		"format": "prettier --write .",
 		"lint": "prettier --check .",
-		"start": "vite preview --port 3000 --host"
+		"start": "node build/index.js"
 	},
 	"devDependencies": {
 		"@lucide/svelte": "^0.484.0",
