--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
 		"@lucide/svelte": "^0.484.0",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/adapter-node": "^5.2.11",
+		"@sveltejs/adapter-vercel": "^5.8.2",
 		"@sveltejs/kit": "^2.9.0",
 		"@sveltejs/vite-plugin-svelte": "^5.0.0",
 		"autoprefixer": "^10.4.20",
 		"bits-ui": "^0.22.0",
 		"clsx": "^2.1.1",
 		"cmdk-sv": "^0.0.18",
+		"daisyui": "^5.0.49",
 		"formsnap": "^1.0.1",
 		"lucide-svelte": "^0.468.0",
 		"mode-watcher": "^0.5.1",
@@ -31,7 +33,7 @@
 		"sveltekit-superforms": "^2.21.1",
 		"tailwind-merge": "^2.5.5",
 		"tailwind-variants": "^0.3.0",
-		"tailwindcss": "^3.4.9",
+		"tailwindcss": "^3.4.17",
 		"vaul-svelte": "^0.3.2",
 		"vite": "^6.0.0",
 		"vite-plugin-compression": "^0.5.1",
@@ -41,6 +43,8 @@
 		"@supabase/supabase-js": "^2.48.1",
 		"@tailwindcss/forms": "^0.5.9",
 		"@tailwindcss/typography": "^0.5.15",
-		"highlight.js": "^11.11.0"
+		"@tailwindcss/vite": "^4.1.11",
+		"highlight.js": "^11.11.0",
+		"install": "^0.13.0"
 	}
 }
